--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,10 @@ body {
 	src: url(nealfunfont.ttf);
 }
 
+a {
+	text-decoration: none;
+	color: var(--foreground);
+}
 
 #title {
 	text-align: center;
