add the ReturnHome component to navigate home; add the SubAndTitle component for titles and subtitles

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,13 @@ a {
 	color: var(--foreground);
 }
 
+#returnHome {
+	font-size: 250%;
+	font-family: neallogo;
+	margin: 1vw;
+	position: fixed;
+}
+
 #title {
 	text-align: center;
 	font-weight: normal;
